--- a/catch-of-the-day/src/css/_animations.styl
+++ b/catch-of-the-day/src/css/_animations.styl
@@ -27,12 +27,26 @@
     padding 0
 
 .count-enter
-  transition all 2.5s
+  transition all .25s
   transform translateY(100%)
   &.count-enter-active
     transform translateY(0)
 
 .count-leave
-  transition all 2.5s
+  transition all .25s
   position absolute
+  left 0
+  bottom 0
+  transform trnaslateY(0)
   &.count-leave-active
+    transform translateY(-100%)
+
+
+
+
+
+
+
+
+
+
